--- a/manga_web/templates/base.html
+++ b/manga_web/templates/base.html
@@ -48,7 +48,7 @@
             <a class="navbar-item" href="{% url 'manga:faq' %}">
               <span class="icon is-left has-text-success"><i class="fas fa-question"></i></span> <span>F.A.Q</span>
             </a>
-            <a class="navbar-item" href="{% url 'contact_form' %}">
+            <a class="navbar-item" href="{% url 'manga:faq' %}">
               <span class="icon is-left has-text-link"><i class="fas fa-envelope"></i></span> <span>Contact</span>
             </a>
             <div class="navbar-item">
