--- a/manga_web/templates/base.html
+++ b/manga_web/templates/base.html
@@ -48,7 +48,7 @@
             <a class="navbar-item" href="{% url 'manga:faq' %}">
               <span class="icon is-left has-text-success"><i class="fas fa-question"></i></span> <span>F.A.Q</span>
             </a>
-            <a class="navbar-item" href="{% url 'manga:faq' %}">
+            <a class="navbar-item" href="{% url 'django_contact_form' %}">
               <span class="icon is-left has-text-link"><i class="fas fa-envelope"></i></span> <span>Contact</span>
             </a>
             <div class="navbar-item">
@@ -62,11 +62,11 @@
                   </a>
                 </p>
                 <p class="control">
-                  <a href="https://www.facebook.com/KindleManga/" target="_blank" class="button is-link">
+                  <a href="" target="_blank" class="button is-link">
                     <span class="icon has-text-white">
-                      <i class="fab fa-facebook"></i>
+                      <i class="fab fa-twitter"></i>
                     </span>
-                    <span>Fanpage</span>
+                    <span>Twitter</span>
                   </a>
                 </p>
               </div>
