--- a/manga_web/templates/manga/index.html
+++ b/manga_web/templates/manga/index.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+{% block extra_head %}
+
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+{% endblock %}
 {% block body %}
 <section class="hero is-large">
   <div class="hero-body">
@@ -58,8 +63,6 @@
       color: white;
     }
   </style>
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script>
     var vm = new Vue({
       el: '#app',
