--- a/manga_web/templates/manga/index.html
+++ b/manga_web/templates/manga/index.html
@@ -21,7 +21,7 @@
                 @click="setResult(result)"
                 class="autocomplete-result">
                 {% verbatim %}
-                  {{ result.name }} - {{ result.source }}
+                  {{ result.name }} [{{ result.source }}]
                 {% endverbatim %}
               </li>
             </ul>
