--- a/manga_web/templates/base.html
+++ b/manga_web/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load django_htmx %}
 <!DOCTYPE html>
 <html>
   <head>
@@ -19,6 +20,7 @@
     <meta property="og:image" content="{% block meta_image %}https://i.imgur.com/yVthrKd.jpg{% endblock %}" />
     <meta property="og:description" content="{% block meta_description %}Tải bộ truyện tranh yêu thích của bạn về Kindle và đọc mọi lúc mọi nơi. Hoàn toàn miễn phí.{% endblock %}" />
 	  <script id="chatBroEmbedCode">/* Chatbro Widget Embed Code Start */function ChatbroLoader(chats,async){async=!1!==async;var params={embedChatsParameters:chats instanceof Array?chats:[chats],lang:navigator.language||navigator.userLanguage,needLoadCode:'undefined'==typeof Chatbro,embedParamsVersion:localStorage.embedParamsVersion,chatbroScriptVersion:localStorage.chatbroScriptVersion},xhr=new XMLHttpRequest;xhr.withCredentials=!0,xhr.onload=function(){eval(xhr.responseText)},xhr.onerror=function(){console.error('Chatbro loading error')},xhr.open('GET','//www.chatbro.com/embed.js?'+btoa(unescape(encodeURIComponent(JSON.stringify(params)))),async),xhr.send()}/* Chatbro Widget Embed Code End */ChatbroLoader({encodedChatId: '92f54'});</script>
+    <script src="https://unpkg.com/htmx.org@1.7.0"></script>
     {% block extra_head %}{% endblock %}
   </head>
   <body>
@@ -38,17 +40,17 @@
         <div class="navbar-menu" id="navMenu">
           <div class="navbar-end">
             <!-- navbar items -->
-            <a class="navbar-item" href="{% url "manga:home" %}">
+            <a class="navbar-item" href="{% url "manga:home" %}" hx-get="{% url 'manga:home' %}" hx-trigger="click" hx-target="#body" hx-swap="innerHTML">
               <span class="icon is-left has-text-primary"><i class="fas fa-home"></i></span> <span>Home</span>
             </a>
 
-            <a class="navbar-item" href="{% url 'manga:list' %}">
+            <a class="navbar-item" href="{% url 'manga:list' %}" hx-get="{% url 'manga:list' %}" hx-trigger="click" hx-target="#body" hx-swap="innerHTML">
               <span class="icon is-left has-text-danger"><i class="fas fa-book"></i></span> <span>Manga List</span>
             </a>
-            <a class="navbar-item" href="{% url 'manga:faq' %}">
+            <a class="navbar-item" href="{% url 'manga:faq' %}" hx-get="{% url 'manga:faq' %}" hx-trigger="click" hx-target="#body" hx-swap="innerHTML">
               <span class="icon is-left has-text-success"><i class="fas fa-question"></i></span> <span>F.A.Q</span>
             </a>
-            <a class="navbar-item" href="{% url 'django_contact_form' %}">
+            <a class="navbar-item" href="{% url 'django_contact_form' %}" hx-get="{% url 'django_contact_form' %}" hx-trigger="click" hx-target="#body" hx-swap="innerHTML">
               <span class="icon is-left has-text-link"><i class="fas fa-envelope"></i></span> <span>Contact</span>
             </a>
             <div class="navbar-item">
@@ -75,8 +77,10 @@
         </div>
       </nav>
     </div>
+    <div id="body" hx-swap-oob="true">
     {% block body %}
     {% endblock %}
+    </div>
     <footer class="footer" style="background: white;">
     <div class="content has-text-centered">
         <p>
