--- a/manga_web/templates/manga/index.html
+++ b/manga_web/templates/manga/index.html
@@ -1,9 +1,4 @@
 {% extends "base.html" %}
-{% block extra_head %}
-
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-{% endblock %}
 {% block body %}
 <section class="hero is-large">
   <div class="hero-body">
@@ -13,18 +8,21 @@
       <form action="{% url "manga:search" %}" class="control">
         <div class="columns">
           <div id="app" class="column is-10-mobile is-offset-1-mobile is-8-desktop is-offset-2-desktop">
-            <input autocomplete="off" type="text" class="input is-primary" name="q" placeholder="Tên manga, từ khóa ..." v-model="search" @input="onChange">
-            <ul v-show="isOpen" class="autocomplete-results">
-              <li
-                v-for="(result, i) in results"
-                :key="i"
-                @click="setResult(result)"
-                class="autocomplete-result">
-                {% verbatim %}
-                  {{ result.name }} [{{ result.source }}]
-                {% endverbatim %}
-              </li>
-            </ul>
+            <div class="field">
+              <div class="control is-loading">
+                <input type="text" 
+                  name="q" placeholder="Tên manga, từ khóa ..." 
+                  hx-get="{{ scheme }}://{{ request.get_host }}/ajax/search/" 
+                  hx-trigger="keyup changed delay:100ms" 
+                  hx-target="#search-results" 
+                  hx-indicator=".is-loading"
+                  autocomplete="off" 
+                  class="input is-primary" 
+                  >
+                <div id="search-results">
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="columns">
@@ -39,73 +37,4 @@
   </div>
 </section>
 
-{% endblock %}
-{% block extra_js %}
-  <style>
-    .autocomplete-results {
-      padding: 0;
-      margin: 0;
-      border: 1px solid #eeeeee;
-      height: 120px;
-      overflow: auto;
-    }
-
-    .autocomplete-result {
-      height: 30px;
-      list-style: none;
-      text-align: left;
-      padding: 4px 2px;
-      cursor: pointer;
-    }
-
-    .autocomplete-result:hover {
-      background-color: #4AAE9B;
-      color: white;
-    }
-  </style>
-  <script>
-    var vm = new Vue({
-      el: '#app',
-      data: {
-        search: '',
-        results: [],
-        isOpen: false,
-      },
-      methods: {
-        onChange() {
-          if (this.search) {
-            searchTerm = this.search.toLowerCase()
-            this.fetchKeywords(searchTerm);
-            // Data is sync, we can search our flat array
-            this.isOpen = true;
-          } else {
-            this.isOpen = false;
-          }
-        },
-        fetchKeywords(term) {
-          if (term) {
-            axios.get('{{ scheme }}://{{ request.get_host }}/ajax/search/?q=' + term)
-            .then((response) => {
-              this.results = response.data.results;
-            })
-            .catch( error => { console.log(error); });
-          }
-        },
-        setResult(result) {
-          this.search = result.name;
-          this.isOpen = false;
-          window.location.href = '{{ scheme }}://{{ request.get_host }}/manga/' + result.slug
-        },
-      },
-      watch: {
-        // Once the items content changes, it means the parent component
-        // provided the needed data
-        results: (value, oldValue) => {
-          // we want to make sure we only do this when it's an async request
-          this.results = value;
-          this.isOpen = true;
-        }
-      }
-    })
-  </script>
 {% endblock %}
