--- a/manga_web/templates/manga/manga_list.html
+++ b/manga_web/templates/manga/manga_list.html
@@ -1,73 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Page {{ page_obj.number }} - Danh sách manga{% endblock %}
-{% block extra_head %}
-  <style>
-  .gmd-2 {
-    -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-    -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-    -ms-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-    -o-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-  }
-
-  .box-ribbon {
-    position: relative;
-    background-color: white;
-  }
-
-  .ribbon {
-    width: 150px;
-    height: 95px;
-    overflow: hidden;
-    position: absolute;
-  }
-  .ribbon::before,
-  .ribbon::after {
-    position: absolute;
-    z-index: -1;
-    content: '';
-    display: block;
-    border: 5px solid #B94826;
-  }
-  .ribbon span {
-    position: absolute;
-    display: block;
-    width: 262px;
-    padding: 4px 0;
-    background-color: coral;
-    color: #fff;
-    font: 700 10px/1 'Lato', sans-serif;
-    text-shadow: 0 1px 1px rgba(0,0,0,.2);
-    text-transform: uppercase;
-    text-align: center;
-  }
-
-  /* top right*/
-  .ribbon-top-right {
-    top: -10px;
-    right: -10px;
-  }
-  .ribbon-top-right::before,
-  .ribbon-top-right::after {
-    border-top-color: transparent;
-    border-right-color: transparent;
-    margin-left: 55px;
-  }
-  .ribbon-top-right::before {
-    top: 0;
-    left: 0;
-  }
-  .ribbon-top-right::after {
-    bottom: 0;
-    right: 0;
-  }
-  .ribbon-top-right span {
-    left: -25px;
-    top: 30px;
-    transform: rotate(45deg);
-  }
-  </style>
-{% endblock %}
+{% block title %}Danh sách manga trang {{ page_obj.number }}{% endblock %}
 {% block body %}
   <section class="section">
   <div class="container has-text-centered">
@@ -103,9 +35,4 @@
     </div>
   </section>
 {% include "manga/paginate.html" %}
-{% endblock %}
-
-{% block extra_js %}
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 {% endblock %}
