--- a/manga_web/templates/manga/faq.html
+++ b/manga_web/templates/manga/faq.html
@@ -22,7 +22,7 @@
                       >bài viết này</a
                     >
                     thì mình đã chia mỗi volume gồm 12 chapter. Còn lẻ bao nhiêu
-                    chap thì sẽ cho vào vol cuối.
+                    chap thì sẽ cho vào vol cuối. (Update: giảm còn 10 chap)
                   </p>
                 </div>
               </article>
