--- a/manga_web/templates/manga/live_search.html
+++ b/manga_web/templates/manga/live_search.html
@@ -1,6 +1,6 @@
             <ul class="autocomplete-results">
               {% for res in results %}
-              <li class="autocomplete-result" data-id="{{res.id}}" hx-trigger="click" hx-get="{{ scheme }}://{{ request.get_host }}/manga/{{res.slug}}" hx-target="#body" hx-swap="innerHTML" >
+              <li class="autocomplete-result" data-id="{{res.id}}" hx-trigger="click" hx-get="{{ scheme }}://{{ request.get_host }}/manga/{{res.slug}}" hx-target="#body" hx-swap="innerHTML" hx-push-url="true">
                   {{ res.name }} [{{ res.source }}]
               </li>
               {% endfor %}
