--- a/manga_web/templates/manga/manga_detail.html
+++ b/manga_web/templates/manga/manga_detail.html
@@ -32,23 +32,22 @@
               </div>
             </div>
           </div>
-          <div class="fb-comments" data-href="{{ request.build_absolute_uri }}" data-numposts="5"></div>
         </div>
         <div class="column">
           {% for vol in volume_list %}
           <div class="card">
             <div class="card-content">
               <div class="content">
-                <h5 class="has-text-weight-semibold">Tập {{vol.number}} <span class="icon is-left {% if vol.fshare_link %}has-text-success{% else %}has-text-info{% endif %}"><i class="fas fa-tag"></i></span> {{ vol.first_chapter.name }} -> {{ vol.last_chapter.name }}</h5>
-                {% if vol.fshare_link %}
-                <a class="button is-success" href="{{vol.fshare_link}}" target="_blank">
+                <h5 class="has-text-weight-semibold">Tập {{vol.number}} <span class="icon is-left {% if vol.file %}has-text-success{% else %}has-text-info{% endif %}"><i class="fas fa-tag"></i></span> Chap {{ vol.chapters.first.number }} -> {{ vol.chapters.last.number }}</h5>
+                {% if vol.file %}
+                <a class="button is-success" href="{{vol.file}}" target="_blank">
                   <span class="icon">
                     <i class="fas fa-toggle-on"></i>
                   </span>
                   <span>Tải về</span>
                 </a>
                 {% else %}
-                <a class="button is-info" href="{% url 'manga:volume' pk=vol.pk %}" target="_blank">
+                <a class="button is-info" href="{% url 'manga:volume' pk=vol.pk %}" hx-get="{% url 'manga:volume' pk=vol.pk %}" hx-trigger="click" hx-target="#body" hx-swap="innerhtml" hx-push-url="true">
                   <span class="icon">
                     <i class="fas fa-toggle-off"></i>
                   </span>
@@ -62,14 +61,4 @@
         </div>
       </div>
     </div>
-{% endblock %}
-{% block extra_js %}
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = 'https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v2.12&appId=1513993565587957&autoLogAppEvents=1';
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
 {% endblock %}
