Fix paginate HTMX

--- a/manga_web/templates/base.html
+++ b/manga_web/templates/base.html
@@ -56,7 +56,7 @@
             <div class="navbar-item">
               <div class="field is-grouped">
                 <p class="control">
-                  <a href="https://github.com/tudoanh/Kindlemanga" target="_blank" class="button is-info">
+                  <a href="https://github.com/Kindlemanga/Kindlemanga" target="_blank" class="button is-info">
                     <span class="icon has-text-white">
                       <i class="fab fa-github"></i>
                     </span>
@@ -64,11 +64,11 @@
                   </a>
                 </p>
                 <p class="control">
-                  <a href="" target="_blank" class="button is-link">
-                    <span class="icon has-text-white">
-                      <i class="fab fa-twitter"></i>
+                  <a href="" target="_blank" class="button is-warning">
+                    <span class="icon has-text-link">
+                      <i class="fas fa-gift"></i>
                     </span>
-                    <span>Twitter</span>
+                    <span>Donate</span>
                   </a>
                 </p>
               </div>
