--- a/manga_web/templates/manga/index.html
+++ b/manga_web/templates/manga/index.html
@@ -9,7 +9,7 @@
         <div class="columns">
           <div id="app" class="column is-10-mobile is-offset-1-mobile is-8-desktop is-offset-2-desktop">
             <div class="field">
-              <div class="control is-loading">
+              <div class="control">
                 <input type="text" 
                   name="q" placeholder="Tên manga, từ khóa ..." 
                   hx-get="{{ scheme }}://{{ request.get_host }}/ajax/search/" 
