--- a/manga_web/templates/manga/paginate.html
+++ b/manga_web/templates/manga/paginate.html
@@ -4,34 +4,46 @@
       <div class="column is-10 is-offset-1">
         <nav class="pagination is-centered" role="navigation" aria-label="pagination">
           {% if page_obj.has_previous %}
-          <a href="?{% if query %}q={{query}}&{% endif %}page={{ page_obj.previous_page_number }}" class="pagination-previous">Previous</a>
+          <a href="?{% if query %}q={{query}}&{% endif %}page={{ page_obj.previous_page_number }}" class="pagination-previous"
+          hx-trigger="click" hx-get="?{% if query %}q={{query}}&{% endif %}page={{ page_obj.previous_page_number }}" hx-target="#body" hx-swap="innerHTML" hx-push-url="true"
+          >Previous</a>
           {% else %}
           <a class="pagination-previous" disabled>Previous</a>
           {% endif %}
           {% if page_obj.has_next %}
-          <a href="?{% if query %}q={{query}}&{% endif %}page={{ page_obj.next_page_number }}" class="pagination-next">Next page</a>
+          <a href="?{% if query %}q={{query}}&{% endif %}page={{ page_obj.next_page_number }}" class="pagination-next"
+          hx-trigger="click" hx-get="?{% if query %}q={{query}}&{% endif %}page={{ page_obj.next_page_number }}" hx-target="#body" hx-swap="innerHTML" hx-push-url="true"
+          >Next page</a>
           {% else %}
           <a class="pagination-next" disabled>Next page</a>
           {% endif %}
           <ul class="pagination-list">
             {% if page_obj.number > 2 %}
-              <li><a href="?page=1" class="pagination-link">1</a></li>
+              <li><a href="?{% if query %}q={{query}}&{% endif %}page=1" class="pagination-link"
+                    hx-trigger="click" hx-get="?{% if query %}q={{query}}&{% endif %}page=1" hx-target="#body" hx-swap="innerHTML" hx-push-url="true"
+                >1</a></li>
               <li><span class="pagination-ellipsis">&hellip;</span></li>
             {% endif %}
             {% for i in paginator.page_range %}
               {% if page_obj.number == i %}
               <li>
-                <a href="" class="pagination-link is-current">{{ i }}</a>
+                <a href="" class="pagination-link is-current"
+                  hx-trigger="click" hx-get="" hx-target="#body" hx-swap="innerHTML" hx-push-url="true"
+                >{{ i }}</a>
               </li>
               {% elif i > page_obj.number|add:'-2' and i < page_obj.number|add:'2' %}
               <li>
-                <a href="?{% if query %}q={{query}}&{% endif %}page={{ i }}" class="pagination-link">{{ i }}</a>
+                <a href="?{% if query %}q={{query}}&{% endif %}page={{ i }}" class="pagination-link"
+                  hx-trigger="click" hx-get="?{% if query %}q={{query}}&{% endif %}page={{ i }}" hx-target="#body" hx-swap="innerHTML" hx-push-url="true"
+                >{{ i }}</a>
               </li>
               {% endif %}
             {% endfor %}
             {% if page_obj.number < page_obj.paginator.num_pages|add:'-1' %}
               <li><span class="pagination-ellipsis">&hellip;</span></li>
-              <li><a href="?{% if query %}q={{query}}&{% endif %}page={{page_obj.paginator.num_pages}}" class="pagination-link">{{ page_obj.paginator.num_pages }}</a></li>
+              <li><a href="?{% if query %}q={{query}}&{% endif %}page={{page_obj.paginator.num_pages}}" class="pagination-link"
+                  hx-trigger="click" hx-get="?{% if query %}q={{query}}&{% endif %}page={{page_obj.paginator.num_pages}}" hx-target="#body" hx-swap="innerHTML" hx-push-url="true"
+                >{{ page_obj.paginator.num_pages }}</a></li>
             {% endif %}
           </ul>
         </nav>
