--- a/manga_web/templates/manga/manga_detail.html
+++ b/manga_web/templates/manga/manga_detail.html
@@ -3,6 +3,19 @@
 {% block meta_url %}{{ request.build_absolute_uri }}{% endblock %}
 {% block meta_description %}{{ manga.description }}{% endblock %}
 {% block title %}{{ manga.name }}{% endblock %}
+{% block extra_head %}
+<style>
+  .htmx-settling img {
+    opacity: 0;
+  }
+  img {
+    margin-top: 30px;
+    transition: opacity 300ms ease-in;
+    display: block;
+    margin: 0 auto;
+  }
+</style>
+{% endblock %}
 {% block body %}
   <div class="section">
     <div class="container">
@@ -33,8 +46,10 @@
             </div>
           </div>
         </div>
-        <div class="column" hx-trigger="load" hx-get="{% url 'manga:volume-list' slug=manga.slug %}" hx-target="#volumes">
-          <div id="volumes"></div>
+        <div class="column" hx-trigger="load" hx-get="{% url 'manga:volume-list' slug=manga.slug %}" hx-target="#volumes" hx-indicator=".htmx-indicator">
+          <div id="volumes">
+          <img alt="Result loading..." class="htmx-indicator" width="150" src="https://htmx.org/img/bars.svg"/>
+          </div>
         </div>
       </div>
     </div>
