Fix captcha and add converting status

--- a/manga_web/templates/manga/thanks.html
+++ b/manga_web/templates/manga/thanks.html
@@ -3,7 +3,9 @@
 {% block body %}
 <section class="section">
   <div class="container has-text-centered">
-    <h1 class="title">Thank you!</h1>
+    <h1 class="title">Bắt đầu convert <a href="{% url "manga:detail" slug=manga.slug %}" style="text-color: #363636; border-bottom: solid;"
+                  hx-get="{% url "manga:detail" slug=manga.slug %}" hx-trigger="click" hx-target="#body" hx-swap="innerhtml" hx-push-url="true"
+                  >{{manga.name}}</a> - Vol {{volume.number}}</h1>
     <h2 class="subtitle">Xin cảm ơn bạn đã sử dụng Kindle Manga. Vui lòng chờ 10 - 15 phút để truyện của bạn được convert thành công.</h2>
     <figure>
       <img src="https://i.imgur.com/O9G7q4I.gif" />
